--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -8,6 +8,8 @@
             <p> This is some text in the home webpage.
             <br> I think it's neat that the server live changes the output
             </p>
+
+            <img src = '../static/alena-aenami-escape-hd.jpeg'>
         </div>
     </div>
 </div>
